# askai

./: .gitignore  Cargo.toml  LICENSE  README.md  ai  askai  install-simple.sh  install.sh  test_cd.sh  test_eval.sh
Formula/: askai.rb
src/: cli.rs  error.rs  main.rs
src/ai/: claude.rs  codex.rs  context.rs  factory.rs  gemini.rs  history.rs  mod.rs  prompt_template.rs  response_processor.rs
src/cache/: mod.rs  prewarming.rs  response.rs
src/commands/: batch.rs  daemon.rs  mod.rs
src/config/: mod.rs
src/context/: detector.rs  mod.rs  project.rs  scanner.rs
src/daemon/: mod.rs  protocol.rs  server.rs  session.rs
src/executor/: batch.rs  mod.rs  planner.rs  rollback.rs  runner.rs  validator.rs
src/plugin/: mod.rs
src/ui/: mod.rs  progress.rs  prompt.rs
tests/: integration_test.rs
