[package]
name = "askai"
version = "0.1.0"
edition = "2021"

[dependencies]
# CLI 프레임워크
clap = { version = "4.5", features = ["derive"] }

# 에러 핸들링
anyhow = "1.0"
thiserror = "1.0"

# 프로세스 실행
tokio = { version = "1.40", features = ["process", "rt-multi-thread", "macros"] }

# 비동기 trait 지원
async-trait = "0.1"

# 터미널 UI
colored = "2.1"
dialoguer = "0.11"

# 직렬화 (설정 파일용)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# 정규표현식 (응답 후처리용)
regex = "1.10"

# 지연 초기화 (캐싱용)
once_cell = "1.19"

# 시간 처리 (RAG 히스토리용)
chrono = { version = "0.4", features = ["serde"] }

# 해싱 (캐시 키 생성용)
sha2 = "0.10"

# 홈 디렉토리 경로 (캐시 파일 저장용)
dirs = "5.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
